--- a/site/index.html
+++ b/site/index.html
@@ -44,17 +44,17 @@
                                 <li><img src="1.png" alt=""> Arthurian</li>
                                 <li><img src="1.png" alt=""> Babylonian</li>
                                 <li><img src="1.png" alt=""> Celtic</li>
-                                <li><img src="https://static.wikia.nocookie.net/smite_gamepedia/images/0/0e/NewUI_Pantheon_Chinese.png/revision/latest?cb=20150208141525" alt=""> Chinese</li>
-                                <li><img src="https://static.wikia.nocookie.net/smite_gamepedia/images/2/27/NewUI_Pantheon_Egyptian.png/revision/latest?cb=20150208141531" alt=""> Egyptian</li>
-                                <li><img src="https://static.wikia.nocookie.net/smite_gamepedia/images/6/62/NewUI_Pantheon_Great_Old_Ones.png/revision/latest?cb=20200530225924" alt=""> Great Old Ones</li>
-                                <li><img src="https://static.wikia.nocookie.net/smite_gamepedia/images/7/7f/NewUI_Pantheon_Greek.png/revision/latest?cb=20150208141537" alt=""> Greek</li>
-                                <li><img src="https://static.wikia.nocookie.net/smite_gamepedia/images/f/f8/NewUI_Pantheon_Hindu.png/revision/latest?cb=20150208141542" alt=""> Hindu</li>
-                                <li><img src="https://static.wikia.nocookie.net/smite_gamepedia/images/1/10/NewUI_Pantheon_Japanese.png/revision/latest?cb=20151127141517" alt=""> Japanese</li>
-                                <li><img src="https://static.wikia.nocookie.net/smite_gamepedia/images/4/42/NewUI_Pantheon_Maya.png/revision/latest?cb=20150208141548" alt=""> Maya</li>
-                                <li><img src="https://static.wikia.nocookie.net/smite_gamepedia/images/2/2a/NewUI_Pantheon_Norse.png/revision/latest?cb=20150208141554" alt=""> Norse</li>
-                                <li><img src="https://static.wikia.nocookie.net/smite_gamepedia/images/3/37/NewUI_Pantheon_Polynesian.png/revision/latest?cb=20180923040248" alt=""> Polynesian</li>
-                                <li><img src="https://static.wikia.nocookie.net/smite_gamepedia/images/1/18/NewUI_Pantheon_Roman.png/revision/latest?cb=20150208141600" alt=""> Roman</li>
-                                <li><img src="https://static.wikia.nocookie.net/smite_gamepedia/images/1/1b/NewUI_Pantheon_Slavic.png/revision/latest?cb=20180530155605" alt=""> Slavic</li>
+                                <li><img src="1.png" alt=""> Chinese</li>
+                                <li><img src="1.png" alt=""> Egyptian</li>
+                                <li><img src="1.png" alt=""> Great Old Ones</li>
+                                <li><img src="1.png" alt=""> Greek</li>
+                                <li><img src="1.png" alt=""> Hindu</li>
+                                <li><img src="1.png" alt=""> Japanese</li>
+                                <li><img src="1.png" alt=""> Maya</li>
+                                <li><img src="1.png" alt=""> Norse</li>
+                                <li><img src="1.png" alt=""> Polynesian</li>
+                                <li><img src="1.png" alt=""> Roman</li>
+                                <li><img src="1.png" alt=""> Slavic</li>
                             </ul> 
                         </p>
                 </div>
